descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2013-0X-XX  Release 7.24.2                                     ---
----------------------------------------------------------------------

* added -f option for flattening combs to 'comb' command - Cliff Yapp
* added support for boolean op filtering in search - Cliff Yapp
* added new g-raw geometry converter - Jon Engbert, Daniel Roßberg
* improved g-stl usage and documentation - Jon Engbert
* added -c and -r region flag options to the comb command - Cliff Yapp
* added -p/-P point/line plot options to 'burst' tool - Sean Morrison
* added -w wrapping option to the 'comb' command - Cliff Yapp
* archer respects LIBRT_BOT_MINTIE environment variable - Bob Parker
* new 'cchannel' procedural geometry tool for C-Channel - Emory Huff
* improved 'comb' command error messages - Talwinder Saini
* pl -> plot3 rename for utilities and docs - Tom Browder, Cliff Yapp
* exposed 'coil' command within mged & archer - Alexandrus, Cliff Yapp
* added centroid reporting to 'analyze' command output - Csaba Nagy
* added arb8 centroid 'analyze' command reporting - Silviu Ungureanu
* pipe centroid, volume, & surface area analyze reporting - Csaba Nagy
* added ebm centroid 'analyze' command reporting - Michael Huang
* improved help option consistency across numerous tools - Carl Moore
* upgraded libpng to 1.6.3 - Erik Greenwald


----------------------------------------------------------------------
--- 2013-06-13  Release 7.24.0                                     ---
----------------------------------------------------------------------

This major update to BRL-CAD comes after nearly a full year of
development.  This is the alpha release unveiling of Archer/MGED, a
preliminary interface update to BRL-CAD's graphical geometry editor.